[gd_scene load_steps=8 format=3 uid="uid://bjvj1gux5vqm5"]

[ext_resource type="FontFile" uid="uid://ddmsbwqyya44t" path="res://fonts/m6x11.ttf" id="1_jtmn0"]
[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_w8ydn"]
[ext_resource type="Texture2D" uid="uid://bqjkmi0odbocm" path="res://scenes/menus/popupMenu.png" id="2_x4xc8"]
[ext_resource type="PackedScene" uid="uid://753dvq3mxgal" path="res://scenes/menus/components/menu_button.tscn" id="3_46yse"]
[ext_resource type="PackedScene" uid="uid://ebgv2em0agr3" path="res://scenes/menus/options_menu.tscn" id="5_g4xge"]

[sub_resource type="LabelSettings" id="LabelSettings_e703w"]
font = ExtResource("1_jtmn0")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jg687"]
font = ExtResource("1_jtmn0")
font_size = 48
font_color = Color(0.215686, 0.580392, 0.431373, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w8ydn")

[node name="HighScore" type="Label" parent="."]
visibility_layer = 524288
layout_mode = 0
offset_left = 144.0
offset_top = 48.0
offset_right = 432.0
offset_bottom = 80.0
text = "High Score: 199"
label_settings = SubResource("LabelSettings_e703w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Frame" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_right = 144.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_x4xc8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visibility_layer = 524288
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_right = 144.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MainMenu" type="Label" parent="VBoxContainer"]
visible = false
visibility_layer = 524288
layout_mode = 2
text = "Main Menu"
label_settings = SubResource("LabelSettings_jg687")
horizontal_alignment = 1

[node name="Spacer" type="CenterContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="StartContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" parent="VBoxContainer/StartContainer" instance=ExtResource("3_46yse")]
layout_mode = 2
focus_neighbor_top = NodePath("../../QuitContainer/QuitButton")
focus_neighbor_bottom = NodePath("../../OptionsContainer/OptionsButton")
text = "START"
pressed_sound = 1

[node name="OptionsContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OptionsButton" parent="VBoxContainer/OptionsContainer" instance=ExtResource("3_46yse")]
layout_mode = 2
focus_neighbor_top = NodePath("../../StartContainer/StartButton")
focus_neighbor_bottom = NodePath("../../QuitContainer/QuitButton")
text = "OPTIONS"

[node name="QuitContainer" type="CenterContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="QuitButton" parent="VBoxContainer/QuitContainer" instance=ExtResource("3_46yse")]
visible = false
layout_mode = 2
focus_neighbor_top = NodePath("../../OptionsContainer/OptionsButton")
focus_neighbor_bottom = NodePath("../../StartContainer/StartButton")
text = "QUIT"
pressed_sound = 0

[node name="OptionsMenu" parent="." instance=ExtResource("5_g4xge")]
visible = false
layout_mode = 1
offset_top = 32.0
offset_bottom = 192.0

[connection signal="pressed" from="VBoxContainer/StartContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="close" from="OptionsMenu" to="." method="_on_options_menu_close"]
[connection signal="mute" from="OptionsMenu" to="." method="_on_options_menu_mute"]
[connection signal="worm_mode" from="OptionsMenu" to="." method="_on_options_menu_worm_mode"]
